--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,33 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_tinder">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.putinder.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_news"
+        android:name="com.example.putinder.ui.news.NewsFragment"
+        android:label="NEWS"
+        tools:layout="@layout/fragment_news" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.putinder.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_chat"
+        android:name="com.example.putinder.ui.chat.ChatFragment"
+        android:label="CHAT"
+        tools:layout="@layout/fragment_chat" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.putinder.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_tinder"
+        android:name="com.example.putinder.ui.tinder.TinderFragment"
+        android:label="TINDER"
+        tools:layout="@layout/fragment_tinder" />
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.putinder.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_favorite"
+        android:name="com.example.putinder.ui.favorite.FavoriteFragment"
+        android:label="FAVORITE"
+        tools:layout="@layout/fragment_favorite" />
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.putinder.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_profile"
+        android:name="com.example.putinder.ui.profile.ProfileFragment"
+        android:label="PROFILE"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
