--- a/app/src/main/res/layout/fragment_tinder.xml
+++ b/app/src/main/res/layout/fragment_tinder.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
@@ -32,11 +32,6 @@
             android:background="@android:color/holo_red_light" />
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout>
 
