--- a/app/src/main/res/layout/fragment_tinder.xml
+++ b/app/src/main/res/layout/fragment_tinder.xml
@@ -8,9 +8,10 @@
         android:id="@+id/swipeStack"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        app:stack_rotation="10"
-        app:stack_size="3"/>
+app:stack_spacing="0dp"
+        app:stack_rotation="0"
+        android:elevation="4dp"
+        />
     <RelativeLayout
         android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
