--- a/app/src/main/res/layout/fragment_tinder.xml
+++ b/app/src/main/res/layout/fragment_tinder.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,10 +6,9 @@
     android:clipChildren="false">
 
     <link.fls.swipestack.SwipeStack
-        android:id="@+id/swipe_stack"
+        android:id="@+id/swipeStack"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:padding="10dp"
         app:stack_rotation="0"
         app:stack_spacing="0dp"
@@ -27,17 +25,14 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:alpha="0"
-            android:background="@android:color/holo_red_light"
-             />
+            android:background="@android:color/holo_red_light" />
         <View
             android:layout_alignParentEnd="true"
             android:id="@+id/likeView"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:alpha="0"
-            android:background="@drawable/like_swipe_icon"/>
+            android:alpha="0"/>
     </RelativeLayout>
 
 
 </FrameLayout>
-
