--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     card_view:cardCornerRadius="10dp"
     card_view:cardElevation="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        >
 
 
         <ImageView
@@ -42,7 +38,7 @@
         </LinearLayout>
 
 
-    </LinearLayout>
+
 
 
 </androidx.cardview.widget.CardView>
