--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -5,16 +5,42 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="5dp">
+    card_view:cardElevation="5dp"
+    android:id="@+id/cardView"
+    >
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image_view"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="75"
-            android:src="@color/colorPrimaryDark" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@color/colorPrimaryDark"
+                ></ImageView>
+
+
+           <ImageButton
+               android:layout_width="65dp"
+               android:layout_height="65dp"
+               android:src="@drawable/build_route"
+               android:background="@android:color/transparent"
+               android:layout_alignParentEnd="true"
+               android:layout_alignParentBottom="true"
+               android:layout_marginBottom="8dp"
+               android:layout_marginRight="8dp"/>
+
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,7 +63,7 @@
                 android:textSize="24dp" />
         </LinearLayout>
 
-
+    </LinearLayout>
 
 
 
