stable realm, Sights, server, gmaps, location(kinda)

--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -26,18 +26,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@color/colorPrimaryDark"
-                ></ImageView>
+                >
+
+            </ImageView>
 
 
-           <ImageButton
-               android:layout_width="65dp"
-               android:layout_height="65dp"
-               android:src="@drawable/build_route"
-               android:background="@android:color/transparent"
-               android:layout_alignParentEnd="true"
-               android:layout_alignParentBottom="true"
-               android:layout_marginBottom="8dp"
-               android:layout_marginRight="8dp"/>
+            <ImageButton
+                android:id="@+id/routeButton"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/build_route" >
+                </ImageButton>
+            <TextView
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="20dp"
+                android:textAlignment="center"
+                android:layout_marginBottom="20dp"
+                android:id="@+id/text_distance"
+                android:text="Loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:textColor="@android:color/white">
+
+            </TextView>
 
         </RelativeLayout>
 
