--- a/app/src/main/res/layout/photos_item.xml
+++ b/app/src/main/res/layout/photos_item.xml
@@ -53,7 +53,7 @@
                         android:id="@+id/id_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+                        android:textSize="20dp"
                         android:text="ID"
                          />
 
@@ -63,8 +63,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="30"
                         android:text="Title"
-
-                        android:textSize="20dp" />
+                        />
 
 
                 </LinearLayout>
