--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">130.211.123.86</domain>
+        <domain includeSubdomains="true">35.223.172.175</domain>
     </domain-config>
 </network-security-config>
