--- a/app/src/main/res/layout/fragment_tinder.xml
+++ b/app/src/main/res/layout/fragment_tinder.xml
@@ -70,6 +70,10 @@
             android:alpha="0"
             android:background="@drawable/like_swipe_icon" />
     </RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
