--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -54,14 +54,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="sometext"
-                android:textSize="44sp" />
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/sights_desc_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="description"
+                android:maxLines="1"
                 android:textSize="24dp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/more_info_btn"
+                    android:gravity="end"
+                    android:text="Подробнее"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
