--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     card_view:cardCornerRadius="10dp"
     card_view:cardElevation="5dp"
-    android:id="@+id/cardView"
 
     >
 
@@ -26,35 +25,34 @@
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@color/colorPrimaryDark"
-                >
+                android:src="@color/colorPrimaryDark">
 
             </ImageView>
 
 
             <ImageButton
                 android:id="@+id/routeButton"
-                 android:layout_width="65dp"
-               android:layout_height="65dp"
-               android:src="@drawable/build_route"
-               android:background="@android:color/transparent"
-               android:layout_alignParentEnd="true"
-               android:layout_alignParentBottom="true"
-               android:layout_marginBottom="14dp"
-               android:layout_marginRight="8dp" >
-                </ImageButton>
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="14dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/build_route"></ImageButton>
+
             <TextView
+                android:id="@+id/text_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginRight="20dp"
-                android:textAlignment="center"
                 android:layout_marginBottom="28dp"
-                android:id="@+id/text_distance"
                 android:text="Loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12dp"
-                android:textColor="@android:color/white">
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="11dp">
 
             </TextView>
 
@@ -72,18 +70,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="sometext"
-                android:textSize="44sp" />
+                android:maxLines="2"
+                android:textSize="26sp" />
 
             <TextView
                 android:id="@+id/sights_desc_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:text="description"
                 android:textSize="24dp" />
         </LinearLayout>
 
-    </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <Button
+                android:id="@+id/more_info_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="Подробнее"/>
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
