--- a/app/src/main/res/layout/photos_item.xml
+++ b/app/src/main/res/layout/photos_item.xml
@@ -12,10 +12,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_margin="5dp"
-        app:cardCornerRadius="20dp"
-        app:contentPadding="10dp">
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,20 +24,14 @@
                 android:id="@+id/photos_image_view"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:layout_marginLeft="5dp"
-
-                android:layout_marginRight="10dp"
-
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginRight="10dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp">
 
 
@@ -50,14 +42,29 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:id="@+id/id_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="20dp"
+                        android:textSize="18dp"
                         android:text="ID"
                          />
+                    <TextView
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:id="@+id/type_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="11dp"
+                        android:text="typePlace"
+                        android:textColor="@android:color/darker_gray"
+                        />
+
 
                     <TextView
+                        android:maxLines="2"
+                        android:ellipsize="end"
                         android:id="@+id/title_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
