--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -70,7 +70,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="sometext"
-                android:maxLines="2"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textSize="26sp" />
 
             <TextView
