--- a/app/src/main/res/layout/photos_item.xml
+++ b/app/src/main/res/layout/photos_item.xml
@@ -37,11 +37,12 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="75"
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_marginLeft="4dp"
                         android:maxLines="1"
                         android:ellipsize="end"
                         android:id="@+id/id_text"
@@ -51,6 +52,7 @@
                         android:text="ID"
                          />
                     <TextView
+                        android:layout_marginLeft="4dp"
                         android:maxLines="1"
                         android:ellipsize="end"
                         android:id="@+id/type_text"
@@ -61,16 +63,17 @@
                         android:textColor="@android:color/darker_gray"
                         />
 
-
-                    <TextView
-                        android:maxLines="2"
-                        android:ellipsize="end"
-                        android:id="@+id/title_text"
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/path_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="30"
-                        android:text="Title"
-                        />
+
+                        android:layout_marginTop="4dp"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_fab" />
+
+
+
 
 
                 </LinearLayout>
