--- a/app/src/main/res/layout/tinder_card.xml
+++ b/app/src/main/res/layout/tinder_card.xml
@@ -93,7 +93,11 @@
                 android:id="@+id/more_info_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@android:string/"
+                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                 android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent"
                 android:text="Подробнее"/>
         </RelativeLayout>
 
