--- a/app/src/main/res/layout/activity_more_info.xml
+++ b/app/src/main/res/layout/activity_more_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
+
     tools:context=".MoreInfoActivity">
 
     <ScrollView
@@ -19,13 +19,15 @@
             <ImageView
                 android:id="@+id/sight_img"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="-40dp"></ImageView>
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                ></ImageView>
 
             <RelativeLayout
                 style="@style/recycler_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="10dp"
                 android:padding="20dp">
 
@@ -83,6 +85,7 @@
 
 
             <LinearLayout
+                android:layout_marginHorizontal="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
