--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#815DC1</item>
-        <item name="colorPrimaryDark">#815DC1</item>
+        <item name="colorPrimaryDark">#bfbfbf</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="recycler_style">
