--- a/app/src/main/res/layout/news_rv_item.xml
+++ b/app/src/main/res/layout/news_rv_item.xml
@@ -1,98 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:elevation="4dp"
-    android:padding="10dp"
-    style="@style/recycler_style">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginBottom="10dp"
-        >
+    android:orientation="vertical"
+    android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/news_source_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TEXT"
-            android:id="@+id/news_link_text_view"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/news_source_image_view"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
+        android:layout_margin="10dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
+        android:elevation="4dp"
+        android:background="@drawable/rounded_user_message"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:id="@+id/post_image_view"
-            android:src="@color/colorPrimaryDark"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TEXT"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:id="@+id/article_name_text_view"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DESCRIPTION"
-            android:textSize="24sp"
-            android:id="@+id/article_description_text_view"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#C8C7CC"
-            />
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:id="@+id/like_news_btn"
-                android:src="@drawable/like_news_icon"
-                android:background="@android:color/transparent"/>
-            <TextView
+            android:layout_height="60dp"
+            android:layout_marginBottom="10dp">
+
+            <ImageView
+                android:id="@+id/news_source_image_view"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/news_likes_count"
-                android:layout_toRightOf="@id/like_news_btn"
-                android:gravity="end|center_vertical"
-                android:text="2346"
-                android:layout_marginLeft="-3dp"/>
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/news_link_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TEXT"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/news_source_image_view"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/post_image_view"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="DATE"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/article_date_text_view"
-                android:gravity="end|center_vertical"
-                android:layout_toRightOf="@+id/news_likes_count"
+                android:layout_height="300dp"
+                android:src="@color/colorPrimaryDark" />
+
+            <TextView
+                android:id="@+id/article_name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TEXT"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/article_description_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DESCRIPTION"
+                android:textSize="24sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#C8C7CC" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/like_news_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/like_news_icon" />
+
+                <TextView
+                    android:id="@+id/news_likes_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="-3dp"
+                    android:layout_toRightOf="@id/like_news_btn"
+                    android:gravity="end|center_vertical"
+                    android:text="2346" />
+
+                <TextView
+                    android:id="@+id/article_date_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_toRightOf="@+id/news_likes_count"
+                    android:gravity="end|center_vertical"
+                    android:text="DATE"
 
 
-                />
-        </RelativeLayout>
+                    />
+            </RelativeLayout>
 
+
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
