--- a/app/src/main/res/layout/visited_places_rv_item.xml
+++ b/app/src/main/res/layout/visited_places_rv_item.xml
@@ -4,36 +4,45 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/visited_places_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_margin="10dp"
+        android:background="@drawable/rounded_user_message"
+        android:elevation="4dp"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/visited_sights_name"
+        <ImageView
+            android:id="@+id/visited_places_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TEXT" />
+            android:src="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/category_sights"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-            android:text="TEXT" />
+            <TextView
+                android:id="@+id/visited_sights_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TEXT" />
 
-        <TextView
-            android:id="@+id/description_visited_sights"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/category_sights"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            android:layout_height="wrap_content"
-            android:text="TEXT" />
+                android:text="TEXT" />
+
+            <TextView
+                android:id="@+id/description_visited_sights"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:text="TEXT" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
