--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,7 +5,10 @@
         android:id="@+id/navigation_news"
         android:icon="@drawable/news_icon"
         android:title="" />
-
+    <item
+        android:id="@+id/navigation_chat"
+        android:icon="@drawable/chat_icon"
+        android:title="" />
 
     <item
         android:id="@+id/navigation_tinder"
